Project/k8s/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend-ns
spec:
  selector:
    app: frontend
  ports:
  - port: 80
